vehicle/tests/golden/error/inferableParameter/unsupportedType/unsupportedType.vcl
@parameter(infer=True)
n : Real
